build: add dependencies to be used by ngcc

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -53,6 +53,7 @@ node_modules_filegroup(
         "combined-stream",
         "component-emitter",
         "concat-map",
+        "convert-source-map",
         "copy-descriptor",
         "core-util-is",
         "debug",
@@ -120,6 +121,7 @@ node_modules_filegroup(
         "kind-of",
         "long",
         "lru-cache",
+        "magic-string",
         "map-cache",
         "map-visit",
         "math-random",
