fixup! build: add dependencies to be used by ngcc

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -131,6 +131,7 @@ node_modules_filegroup(
         "minimatch",
         "minimist",
         "mixin-deep",
+        "mock-fs",
         "nanomatch",
         "normalize-path",
         "oauth-sign",
@@ -177,6 +178,7 @@ node_modules_filegroup(
         "snapdragon-node",
         "snapdragon-util",
         "source-map",
+        "sourcemap-codec",
         "source-map-resolve",
         "source-map-support",
         "source-map-url",
